test/error/invalid_version_base.true
File 0, line 1, col 9 - 13:
version must be specified in decimal

